# PyLibreHardwareMonitor

./: README.cn.md  README.md  command.py  pyproject.toml
PyLibreHardwareMonitor/: __init__.py  computer.py
